[gd_scene load_steps=76 format=2]

[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_1.png" type="Texture" id=1]
[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_2.png" type="Texture" id=2]
[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_3.png" type="Texture" id=3]
[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_4.png" type="Texture" id=4]
[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_5.png" type="Texture" id=5]
[ext_resource path="res://Characters/Boss 3/idle/Boss3_idle_6.png" type="Texture" id=6]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_1.png" type="Texture" id=7]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_3.png" type="Texture" id=8]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_6.png" type="Texture" id=9]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_2.png" type="Texture" id=10]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_5.png" type="Texture" id=11]
[ext_resource path="res://Characters/Boss 3/run/Boss3_run_4.png" type="Texture" id=12]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_1.png" type="Texture" id=13]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_8.png" type="Texture" id=14]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_3.png" type="Texture" id=15]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_9.png" type="Texture" id=16]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_2.png" type="Texture" id=17]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_7.png" type="Texture" id=18]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_4.png" type="Texture" id=19]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_5.png" type="Texture" id=20]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_10.png" type="Texture" id=21]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_11.png" type="Texture" id=22]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_6.png" type="Texture" id=23]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_13.png" type="Texture" id=24]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_1.png" type="Texture" id=25]
[ext_resource path="res://Characters/Boss 3/die/Boss3_die_12.png" type="Texture" id=26]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_8.png" type="Texture" id=27]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_6.png" type="Texture" id=28]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_5.png" type="Texture" id=29]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_2.png" type="Texture" id=30]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_3.png" type="Texture" id=31]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_4.png" type="Texture" id=32]
[ext_resource path="res://Characters/Boss 3/hit/Boss3_hit_7.png" type="Texture" id=33]
[ext_resource path="res://Enemies/PlayerInDash.gd" type="Script" id=34]
[ext_resource path="res://Music and Sounds/swish_4.wav" type="AudioStream" id=35]
[ext_resource path="res://Music and Sounds/Socapex - new_hits_5.wav" type="AudioStream" id=36]
[ext_resource path="res://Music and Sounds/monster-1.wav" type="AudioStream" id=37]
[ext_resource path="res://Music and Sounds/monster-5.wav" type="AudioStream" id=38]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_5.png" type="Texture" id=40]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_8.png" type="Texture" id=41]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_9.png" type="Texture" id=42]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_7.png" type="Texture" id=43]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_4.png" type="Texture" id=44]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_1.png" type="Texture" id=45]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_3.png" type="Texture" id=46]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_1.png" type="Texture" id=47]
[ext_resource path="res://Enemies/Boss3.gd" type="Script" id=48]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_4.png" type="Texture" id=49]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_3.png" type="Texture" id=50]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_6.png" type="Texture" id=51]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_2.png" type="Texture" id=52]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_5.png" type="Texture" id=53]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_7.png" type="Texture" id=54]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_8.png" type="Texture" id=55]
[ext_resource path="res://Characters/Boss 3/attack 1/Boss3_attack1_9.png" type="Texture" id=56]
[ext_resource path="res://HurtHitbox/Hurtbox.tscn" type="PackedScene" id=57]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_2.png" type="Texture" id=58]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=59]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=60]
[ext_resource path="res://HurtHitbox/Hitbox.tscn" type="PackedScene" id=61]
[ext_resource path="res://HurtHitbox/PlayerInRange.tscn" type="PackedScene" id=62]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_6.png" type="Texture" id=64]
[ext_resource path="res://Characters/Boss 3/attack 2/Boss3_attack2_10.png" type="Texture" id=65]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:playback_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.9
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hitbox_enable"
}, {
"args": [  ],
"method": "hit_finished1"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 47 ), ExtResource( 52 ), ExtResource( 50 ), ExtResource( 49 ), ExtResource( 53 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -60 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimationPlayer:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.6, 0.601, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0749451,
"start_offset": 0.0,
"stream": ExtResource( 35 )
} ],
"times": PoolRealArray( 0.6 )
}

[sub_resource type="Animation" id=2]
resource_name = "attack2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 45 ), ExtResource( 58 ), ExtResource( 46 ), ExtResource( 44 ), ExtResource( 40 ), ExtResource( 64 ), ExtResource( 43 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 65 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ), Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitboxDash/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5, 0.501, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "dash_hitbox_enable"
}, {
"args": [  ],
"method": "teleport"
}, {
"args": [  ],
"method": "dash_finished"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2.0 ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("AudioStreamPlayer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"clips": [ {
"end_offset": 0.010377,
"start_offset": 0.0,
"stream": ExtResource( 36 )
} ],
"times": PoolRealArray( 0.5 )
}

[sub_resource type="Animation" id=3]
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 26 ), ExtResource( 24 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -80 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 37 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 33 ), ExtResource( 27 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 38 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=5]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 0, -25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 131.718, 82.061 )

[sub_resource type="CircleShape2D" id=8]
radius = 1924.9

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 238.925, 92.3895 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 250.251, 90.2929 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 75.8851, 175.506 )

[node name="Boss3" type="KinematicBody2D"]
position = Vector2( -100, 0 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 48 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 27 )
offset = Vector2( 0, -20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -59.9668, -34.8269, -56.3943, 90.2071, 88.645, 91.636, 57.2079, -29.8255, -18.527, -71.9798 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 12 )
anims/attack = SubResource( 1 )
anims/attack2 = SubResource( 2 )
anims/die = SubResource( 3 )
anims/hit = SubResource( 4 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 57 )]
visible = false
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -11.376, 9.57983 )
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 59 )]
max_health = 10

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 60 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 8 )

[node name="PlayerInRange" parent="." instance=ExtResource( 62 )]
position = Vector2( -53.1575, 1.71475 )

[node name="CollisionShape2D" parent="PlayerInRange" index="0"]
position = Vector2( -16.1292, -6.14933 )

[node name="PlayerInDash" type="Area2D" parent="."]
position = Vector2( -1.23372, -1.23372 )
collision_layer = 0
script = ExtResource( 34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerInDash"]
position = Vector2( -298.577, -1.50419 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="HitboxDash" parent="." instance=ExtResource( 61 )]
position = Vector2( 29.6098, -6.1687 )
collision_mask = 4

[node name="CollisionShape2D" parent="HitboxDash" index="0"]
position = Vector2( -318.888, 7.05054 )
shape = SubResource( 10 )
disabled = true

[node name="Hitbox" parent="." instance=ExtResource( 61 )]
collision_mask = 4
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -156.849, -69.0709 )
shape = SubResource( 11 )
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 38 )
bus = "Sounds"

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="PlayerInDash" to="PlayerInDash" method="_on_PlayerInDash_body_entered"]
[connection signal="body_exited" from="PlayerInDash" to="PlayerInDash" method="_on_PlayerInDash_body_exited"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="PlayerInRange"]
[editable path="HitboxDash"]
[editable path="Hitbox"]
